# ucal

./: .gitignore  DEPLOYMENT.md  QUICKSTART.md  README.md  pyproject.toml  test_global_mcp.sh
config/: platforms.yaml
docs/: ALTERNATIVES_COMPARISON.md  ARCHITECTURE.md
docs/plans/: 2026-02-24-research-upgrade.md  2026-03-22-anyweb-architecture.md
src/ucal/: __init__.py  server.py
src/ucal/adapters/: base.py  discord_api.py  generic.py  twitter.py  xhs.py  zhihu.py
src/ucal/core/: anti_detect.py  browser.py  session.py
src/ucal/utils/: human_behavior.py
tests/: benchmark_results.md  test_base.py  test_human_behavior.py  test_session.py  test_twitter_browser.py  test_xhs_e2e.py
