[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ucal"
version = "0.1.0"
description = "Universal Content Access Layer - MCP Server for multi-platform content access"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
ucal = "ucal.server:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
